2003-03-28  Christopher Faylor  <cgf@redhat.com>

	* include/sys/cygwin.h: Declare cygwin_internal as unsigned long.
	* external.cc (cygwin_internal): Define as unsigned long.

2003-03-27  Christopher Faylor  <cgf@redhat.com>

	* include/sys/cygwin.h: Move cygwin_internal outside of WINVER
	conditional.

2003-03-27  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.cc: Change 1==foo equations to foo==1 throughout.

2003-03-27  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h: Change class names, methods, members and local vars
	according to the GNU coding style.
	* thread.cc: Ditto.
	* dcrt0.cc (dll_crt0_1): Rename pthread::initMainThread call to
	pthread::init_mainthread.
	* pthread.cc (pthead_getsequence_np): Rename pthread::isGoodObject
	call to pthread::is_good_object.

2003-03-27  Joe Buehler  <jhpb@draco.hekimian.com>

	* autoload.cc: added RegGetKeySecurity()
	* security.cc (get_nt_object_attribute): use RegGetKeySecurity() for
	performance.

2003-03-25  Christopher Faylor  <cgf@redhat.com>
	    Joe Buehler  <jhpb@draco.hekimian.com>

	* fork.cc (fork_parent): Don't copy signals from parent to child here.
	* sigproc.cc (proc_subproc): Copy signals from parent to child pinfo
	here.

2003-03-23  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (class List): Move inline code inside class declaration.
	(List::forEach): Change callback parameter to template class member
	function pointer.
	(pthread_keys::fixup_before_fork): Change to inline.  Use List::forEach
	to fixup keys.
	(pthread_keys::fixup_after_fork): Ditto.
	(pthread_keys::runAllDestructors): Ditto.
	(pthread_key::saveAKey): Remove.
	(pthread_key::restoreAKey): Ditto.
	(pthread_key::destroyAKey): Ditto.
	(pthread_key::run_destructor): Rename to runDestructor.
	(pthread_mutex::fixup_after_fork): Change to inline.  Use List::forEach
	to fixup mutexes after a fork.
	(pthread_mutex::FixupAfterFork): New method.
	(pthread_mutex::mutexes): New member.
	(pthread_cond::fixup_after_fork): Change to inline.  Use List::forEach